2007-01-18  Type Your Name Here  <your.mail.here@FIXME.com>

	More format checking
	* src/uexpression.cc (send_error): here.

2007-01-18  Type Your Name Here  <your.mail.here@FIXME.com>

	Fix warning
	* src/ucommand.cc: Remove casts that drop constness.
	Rather, preserve constness.

2007-01-18  Akim Demaille  <demaille@gostai.com>

	More warnings
	* configure.ac: Activate more G++ warnings.
	Don't pass -Werror to VC++.

2007-01-18  Akim Demaille  <demaille@gostai.com>

	Handle FD_SET portability issues
	* src/network/bsdnet/network.cc (LIBPORT_FD_SET): New.
	Use it to address a warning on Windows.

2007-01-18  Jean-Christophe Baillie  <baillie@gostai.com>

	update externals

2007-01-18  Jean-Christophe Baillie  <baillie@gostai.com>

	small restyling (spaces)
	* src/ubinder.cc: done.
	* src/ubinder.hh: done.
	* src/uvar.cc: done.

2007-01-18  Jean-Christophe Baillie  <baillie@gostai.com>

	This should go into the 'unstable' branch
	fix backward compatibility issue.
	* src/uobject.cc: revert.
	* src/uvalue.cc: revert.
	* src/uvar.cc: revert.

2007-01-18  Jean-Christophe Baillie  <baillie@gostai.com>

	update externals.

2007-01-18  Jean-Christophe Baillie  <baillie@gostai.com>

	Doing a simple obj.x=7; command was triggering UNotifyAccess on x. In
	the more general case of controlled assignment, like "obj.x=7
	time:1s", this call to UVariable::get is necessary to know where to
	start from. In the case of a simple instantaneous assignment, the call
	must be avoided for optimization purposes.

	fix a bug in assignment triggering a non necessary call to UVariable::get()
	* src/ucommand.cc: set controlled and use it in processModifiers as
	well.
	* src/ucommand.hh: moves 'controlled' from local to the call to object
	attribute (to be seen by all subsequent method calls).

2007-01-18  Jean-Christophe Baillie  <baillie@gostai.com>

	UOwned UVar which are UNotifyAccess'd and UNotifyChange'd in the same
	UObject should not trigger a loop of calls to UNotifyAccess.
